examples/test/testpolicy9105.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9105
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key39: value41
      key12: value46
      key37: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value19
          key10: value13
          key35: value24
      podSelector:
        matchLabels:
          key35: value43
          key28: value34
          key10: value4
